--- a/releasenotes.txt
+++ b/releasenotes.txt
@@ -5,6 +5,9 @@
 *            BootStrap   : 4.3.1                                                             *
 *            VSCode      : 1.38.0                                                            *
 **********************************************************************************************
+10.09.2019 Sarath(1.0.0.001)
+-Cleaned up app component files
+-Updated Homepage to pass the selection ID as URL param
 
 09.09.2019 Sarath(1.0.0.000)
 BaseLine structure to the project.
